@startuml
hide methods
hide stereotypes

class Users <<table>> {
  UserId : TEXT (PK)
  CreatedUtc : TEXT
}

class Sessions <<table>> {
  SessionId : TEXT (PK)
  UserId : TEXT (FK)
  Title : TEXT
  CreatedUtc : TEXT
  LastAccessUtc : TEXT
}

class Messages <<table>> {
  MessageId : TEXT (PK)
  SessionId : TEXT (FK)
  Role : TEXT
  Content : TEXT
  CreatedUtc : TEXT
}

class WikipediaPages <<table>> {
  PageId : TEXT (PK)
  SessionId : TEXT (FK)
  Title : TEXT
  SourceUrl : TEXT
  RetrievedUtc : TEXT
}

class DocumentChunks <<table>> {
  ChunkId : TEXT (PK)
  PageId : TEXT (FK)
  Section : TEXT
  Text : TEXT
  Hash : TEXT
}

class ChunkEmbeddings <<table>> {
  ChunkId : TEXT (FK)
  Embedding : BLOB
}

class Citations <<table>> {
  CitationId : TEXT (PK)
  SessionId : TEXT (FK)
  Title : TEXT
  Url : TEXT
  Section : TEXT
}

class Graphs <<table>> {
  GraphId : TEXT (PK)
  SessionId : TEXT (FK)
  Topic : TEXT
  NodesJson : TEXT
  EdgesJson : TEXT
}

Users ||--o{ Sessions
Sessions ||--o{ Messages
Sessions ||--o{ WikipediaPages
WikipediaPages ||--o{ DocumentChunks
DocumentChunks ||--|| ChunkEmbeddings
Sessions ||--o{ Citations
Sessions ||--o{ Graphs

@enduml
